# rs-stm32wb5mmg-examples

./: .gitignore  Cargo.toml  LICENSE.md  MEMORY.x  README.md  STEUP.md  UPLOAD.md  dfu-upload.py  stm32_programmer_cli_hlp.ansi
.cargo/: config.toml
src/: main.rs
