[package]
name = "rs-stm32wb5mmg-examples"
version = "0.1.0"
edition = "2021"

# See more Cargo.toml keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.stm32wb-hal]
version = "0.1.14"
features = ["xG-package"]

[dependencies.cortex-m]
version = "0.6.3"

[dependencies.cortex-m-rt]
version = "0.6.13"

[dependencies.panic-halt]
version = "0.2.0"


[profile.release]
codegen-units = 1 # better optimizations
debug = 2         # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
opt-level = "z"   # smallest binary size
